Add 0.12.0 release changes

--- a/community.html
+++ b/community.html
@@ -289,14 +289,14 @@
                           <iframe
                             width="100%"
                             height="325"
-                            src="https://www.youtube.com/embed/V_HkZsMkvho"
+                            src="https://www.youtube.com/embed/tv3pyCLcJfQ"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
                           <p class="fw-600 mb-0 mt-2">
-                            OpenMetadata 0.11 Release
+                            OpenMetadata 0.12.0 Release
                           </p>
                         </div>
                       </div>
@@ -307,13 +307,13 @@
                           <iframe
                             width="100%"
                             height="325"
-                            src="https://www.youtube.com/embed/Wq257xMYLXs"
+                            src="https://www.youtube.com/embed/FeT9Ia98g4Y"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">June 29th, 2022</p>
+                          <p class="fw-600 mb-0 mt-2">September 7th, 2022</p>
                         </div>
                       </div>
                     </div>
