--- a/index.html
+++ b/index.html
@@ -154,16 +154,17 @@
               </div>
             </div>
             <div class="feature-strip">
-              Get the best in Data Collaboration with
-              <strong>OpenMetadata 0.11.0 Release</strong>. Watch the
+              Get the best in Roles & Policies as well as Data Quality &
+              Profiler with
+              <strong>OpenMetadata 0.12.0 Release</strong>. Watch the
               <a
-                href="https://www.youtube.com/watch?v=V_HkZsMkvho"
+                href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
                 target="_blank"
                 >demo</a
               >
               or
               <a
-                href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a"
+                href="https://blog.open-metadata.org/openmetadata-0-12-0-release-1ac059700de4"
                 target="_blank"
                 >read more</a
               >.
@@ -1397,6 +1398,53 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-0-12-0-release-1ac059700de4"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/Release-0.12.jpg"
+                      alt="release-0.12"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 0.12.0 Release
+                      </h4>
+                      <p class="card-text">
+                        Roles & Policies, Teams Hierarchy, All new Data Quality
+                        & Profiler, Announcements, Slack & MS Teams Webhooks,
+                        Secrets Manager Interface, Custom Attributes, Global
+                        Settings, and more.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/tasks-workflow-in-openmetadata-2904ae1ec5b2"
                     target="_blank"
                   >
@@ -1464,50 +1512,6 @@
                         innovation, improve customer experience, or build new
                         efficiencies, the role of data is becoming more and more
                         important.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/Release11.jpg"
-                      alt="RBAC"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">OpenMetadata 0.11 Release</h4>
-                      <p class="card-text">
-                        Data Collaboration, Column-level Lineage, ML Models,
-                        Data Profiler, Advanced Search, Data Lake Connectors,
-                        and more.
                       </p>
                     </div>
                     <div
