Add relevant meta keywords

--- a/community.html
+++ b/community.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="metadata, data collaboration, metadata community, data discovery, data collaboration"
+      content="metadata, data discovery, data collaboration, metadata lineage, data governance, data catalog, open source"
     />
     <meta name="author" content="open-metadata" />
 
