--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     />
     <meta
       name="description"
-      content="An end-to-end metadata management solution that includes data discovery, governance, data quality, observability, and people collaboration."
+      content="An end-to-end metadata management solution that includes data catalog, data discovery, governance, data quality, observability, and people collaboration."
     />
     <meta
       name="keywords"
-      content="metadata, data discovery, data collaboration, metadata lineage, data governance"
+      content="metadata, data discovery, data collaboration, metadata lineage, data governance, data catalog, open source"
     />
     <meta name="author" content="open-metadata" />
 
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:description"
-      content="An end-to-end metadata management solution that includes data discovery, governance, data quality, observability, and people collaboration."
+      content="An end-to-end metadata management solution that includes data catalog, data discovery, governance, data quality, observability, and people collaboration."
     />
     <meta
       property="og:image"
