Add new connectors logo and webinar video

--- a/community.html
+++ b/community.html
@@ -351,15 +351,15 @@
                       <iframe
                         width="100%"
                         height="325"
-                        src="https://www.youtube.com/embed/rhQKRW54tyg"
+                        src="https://www.youtube.com/embed/gLdTOF81YpI"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        Get Up and Running with OpenMetadata, Metadata
-                        Ingestion, and Data Discovery
+                        Build Trust in your Data with OpenMetadata: Intro to
+                        Data Quality and Profiler.
                       </p>
                     </div>
                   </div>
