--- a/index.html
+++ b/index.html
@@ -793,6 +793,23 @@
                   data-aos="fade-up"
                 >
                   <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/pipeline/dagster"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/dagster.png"
+                      class="media-img mb-2"
+                      alt="service-dagster"
+                      loading="lazy"
+                    />
+                    <h5>Dagster</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a
                     href="https://docs.open-metadata.org/integrations/connectors/delta-lake"
                     target="_blank"
                   >
@@ -849,6 +866,23 @@
                       loading="lazy"
                     />
                     <h5>DynamoDB</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/pipeline/fivetran"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/fivetran.png"
+                      class="media-img mb-2"
+                      alt="service-Fivetran"
+                      loading="lazy"
+                    />
+                    <h5>Fivetran</h5>
                   </a>
                 </div>
                 <div
@@ -1167,6 +1201,23 @@
                       loading="lazy"
                     />
                     <h5>Redash</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/messaging/redpanda"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/redpanda.png"
+                      class="media-img mb-2"
+                      alt="service-redpanda"
+                      loading="lazy"
+                    />
+                    <h5>Redpanda</h5>
                   </a>
                 </div>
 
