Add Apache NiFi

--- a/index.html
+++ b/index.html
@@ -664,6 +664,18 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
+                  <img
+                    src="images/services/apachenifi.png"
+                    class="media-img mb-2"
+                    alt="service-apachenifi"
+                    loading="lazy"
+                  />
+                  <h5>Apache NiFi</h5>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
                   <a
                     href="https://docs.open-metadata.org/integrations/connectors/athena"
                     target="_blank"
