Update breaking links

--- a/index.html
+++ b/index.html
@@ -705,7 +705,10 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <a href="#" target="_blank">
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/pipeline/airbyte"
+                    target="_blank"
+                  >
                     <img
                       src="images/services/airbyte.png"
                       class="media-img mb-2"
@@ -719,7 +722,10 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <a href="#" target="_blank">
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/database/datalake"
+                    target="_blank"
+                  >
                     <img
                       src="images/services/amazon-s3.png"
                       class="media-img mb-2"
@@ -1082,7 +1088,7 @@
                   data-aos="fade-up"
                 >
                   <a
-                    href="https://docs.open-metadata.org/integrations/connectors/mlflow"
+                    href="https://docs.open-metadata.org/openmetadata/connectors/ml-model/mlflow"
                     target="_blank"
                   >
                     <img
@@ -1098,7 +1104,10 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <a href="#" target="_blank">
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/dashboard/mode"
+                    target="_blank"
+                  >
                     <img
                       src="images/services/mode.png"
                       class="media-img mb-2"
@@ -1176,7 +1185,10 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <a href="#" target="_blank">
+                  <a
+                    href="https://docs.open-metadata.org/main-concepts/metadata-standard/schemas/entity/services/connections/database/pinotdbconnection"
+                    target="_blank"
+                  >
                     <img
                       src="images/services/pinot.png"
                       class="media-img mb-2"
@@ -1190,13 +1202,18 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <img
-                    src="images/services/powerbi.png"
-                    class="media-img mb-2"
-                    alt="service-powerbi"
-                    loading="lazy"
-                  />
-                  <h5>Power BI</h5>
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/dashboard/powerbi"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/powerbi.png"
+                      class="media-img mb-2"
+                      alt="service-powerbi"
+                      loading="lazy"
+                    />
+                    <h5>Power BI</h5>
+                  </a>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
