Update connector links

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                   data-aos="fade-up"
                 >
                   <a
-                    href="https://docs.open-metadata.org/integrations/connectors/airflow/airflow"
+                    href="https://docs.open-metadata.org/deployment/airflow"
                     target="_blank"
                   >
                     <img
@@ -652,13 +652,18 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <img
-                    src="images/services/amundsen.png"
-                    class="media-img mb-2"
-                    alt="service-amundsen"
-                    loading="lazy"
-                  />
-                  <h5>Amundsen</h5>
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/metadata/amundsen"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/amundsen.png"
+                      class="media-img mb-2"
+                      alt="service-amundsen"
+                      loading="lazy"
+                    />
+                    <h5>Amundsen</h5>
+                  </a>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
@@ -785,25 +790,35 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <img
-                    src="images/services/clickhouse.png"
-                    class="media-img mb-2"
-                    alt="service-clickhouse"
-                    loading="lazy"
-                  />
-                  <h5>ClickHouse</h5>
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/database/clickhouse"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/clickhouse.png"
+                      class="media-img mb-2"
+                      alt="service-clickhouse"
+                      loading="lazy"
+                    />
+                    <h5>ClickHouse</h5>
+                  </a>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <img
-                    src="images/services/dbt.png"
-                    class="media-img mb-2"
-                    alt="service-dbt"
-                    loading="lazy"
-                  />
-                  <h5>dbt</h5>
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/ingestion/workflows/metadata/dbt"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/dbt.png"
+                      class="media-img mb-2"
+                      alt="service-dbt"
+                      loading="lazy"
+                    />
+                    <h5>dbt</h5>
+                  </a>
                 </div>
 
                 <div
@@ -844,20 +859,25 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <img
-                    src="images/services/druid.png"
-                    class="media-img mb-2"
-                    alt="service-druid"
-                    loading="lazy"
-                  />
-                  <h5>Druid</h5>
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/database/druid"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/druid.png"
+                      class="media-img mb-2"
+                      alt="service-druid"
+                      loading="lazy"
+                    />
+                    <h5>Druid</h5>
+                  </a>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
-                    href="https://docs.open-metadata.org/integrations/connectors/databricks"
+                    href="https://docs.open-metadata.org/openmetadata/connectors/database/databricks"
                     target="_blank"
                   >
                     <img
@@ -924,7 +944,10 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <a href="#" target="_blank">
+                  <a
+                    href="https://docs.open-metadata.org/openmetadata/connectors/database/datalake"
+                    target="_blank"
+                  >
                     <img
                       src="images/services/gcp.png"
                       class="media-img mb-2"
@@ -1173,13 +1196,18 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
-                  <img
-                    src="images/services/pulsar.png"
-                    class="media-img mb-2"
-                    alt="service-pulsar"
-                    loading="lazy"
-                  />
-                  <h5>Pulsar</h5>
+                  <a
+                    href="https://docs.open-metadata.org/main-concepts/metadata-standard/schemas/entity/services/connections/messaging/pulsarconnection"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/pulsar.png"
+                      class="media-img mb-2"
+                      alt="service-pulsar"
+                      loading="lazy"
+                    />
+                    <h5>Pulsar</h5>
+                  </a>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
@@ -1306,7 +1334,7 @@
                   data-aos="fade-up"
                 >
                   <a
-                    href="https://docs.open-metadata.org/integrations/connectors/superset"
+                    href="https://docs.open-metadata.org/openmetadata/connectors/dashboard/superset"
                     target="_blank"
                   >
                     <img
