--- a/community.html
+++ b/community.html
@@ -65,9 +65,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "G-LBLK284YQW");
+      gtag('config', 'G-LBLK284YQW');
     </script>
   </head>
 
@@ -266,78 +266,6 @@
           <section class="bg-white py-10">
             <div class="container px-5">
               <div class="row gx-5 justify-content-center">
-                <div class="col-lg-12 text-center">
-                  <h2 class="section-header fw-600 mb-4">
-                    Missed a Meeting? Access it Anytime
-                  </h2>
-                  <p>
-                    You can watch all of our previous meetings on
-                    <a
-                      href="https://www.youtube.com/c/OpenMetadataChannel"
-                      target="_blank"
-                      >YouTube</a
-                    >.
-                  </p>
-                  <p class="mb-5">
-                    You’ll also find some short feature videos there. Here’s
-                    what’s most recent. Take a look!
-                  </p>
-                  <div class="row gx-5">
-                    <div class="col">
-                      <div class="card">
-                        <div class="card-body">
-                          <iframe
-                            width="100%"
-                            height="325"
-                            src="https://www.youtube.com/embed/tv3pyCLcJfQ"
-                            title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                          ></iframe>
-                          <p class="fw-600 mb-0 mt-2">
-                            OpenMetadata 0.12.0 Release
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="card">
-                        <div class="card-body">
-                          <iframe
-                            width="100%"
-                            height="325"
-                            src="https://www.youtube.com/embed/FeT9Ia98g4Y"
-                            title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                          ></iframe>
-                          <p class="fw-600 mb-0 mt-2">September 7th, 2022</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="svg-border-rounded text-light">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 144.54 17.34"
-                preserveAspectRatio="none"
-                fill="currentColor"
-              >
-                <path
-                  d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"
-                ></path>
-              </svg>
-            </div>
-          </section>
-
-          <section class="bg-light py-10">
-            <div class="container px-5">
-              <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
                   <div class="text-center mb-5">
                     <h2 class="section-header fw-600">OpenMetadata Webinars</h2>
@@ -397,6 +325,78 @@
                       usage, lineage, and data quality tests. Base your business
                       decisions on the right data!
                     </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="svg-border-rounded text-light">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 144.54 17.34"
+                preserveAspectRatio="none"
+                fill="currentColor"
+              >
+                <path
+                  d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"
+                ></path>
+              </svg>
+            </div>
+          </section>
+
+          <section class="bg-light py-10">
+            <div class="container px-5">
+              <div class="row gx-5 justify-content-center">
+                <div class="col-lg-12 text-center">
+                  <h2 class="section-header fw-600 mb-4">
+                    Missed a Meeting? Access it Anytime
+                  </h2>
+                  <p>
+                    You can watch all of our previous meetings on
+                    <a
+                      href="https://www.youtube.com/c/OpenMetadataChannel"
+                      target="_blank"
+                      >YouTube</a
+                    >.
+                  </p>
+                  <p class="mb-5">
+                    You’ll also find some short feature videos there. Here’s
+                    what’s most recent. Take a look!
+                  </p>
+                  <div class="row gx-5">
+                    <div class="col">
+                      <div class="card">
+                        <div class="card-body">
+                          <iframe
+                            width="100%"
+                            height="325"
+                            src="https://www.youtube.com/embed/tv3pyCLcJfQ"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                          ></iframe>
+                          <p class="fw-600 mb-0 mt-2">
+                            OpenMetadata 0.12.0 Release
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <div class="card-body">
+                          <iframe
+                            width="100%"
+                            height="325"
+                            src="https://www.youtube.com/embed/FeT9Ia98g4Y"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                          ></iframe>
+                          <p class="fw-600 mb-0 mt-2">September 7th, 2022</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -533,7 +533,7 @@
     <script src="js/aos.js"></script>
     <script>
       AOS.init({
-        disable: "mobile",
+        disable: 'mobile',
         duration: 600,
         once: true,
       });
