--- a/index.html
+++ b/index.html
@@ -135,24 +135,22 @@
                       >Blog</a
                     >
                   </li>
-                </ul>
-                  <a
-                    style="margin-right:0.5rem;"
-                    class="btn fw-500 btn-outline-primary rounded-pill"
-                    href="https://github.com/open-metadata/OpenMetadata"
-                    target="_blank"
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://github.com/open-metadata/OpenMetadata"
+                      target="_blank"
+                      >GitHub</a
                     >
-                    <i style="margin-right:0.5rem;font-size:18px;" class="fab fa-github"></i>
-                    Star Us
-                  </a>
-                  <a
+                  </li>
+                </ul>
+                <a
                   class="btn fw-500 btn-primary rounded-pill"
-                  href="https://cloud.getcollate.io"
+                  href="https://share.hsforms.com/1fstvMCeZRZKTYA4nG1VTPgcq0j9"
                   target="_blank"
-                  >
-                  <i style="margin-right:0.5rem;font-size:18px;" class="fas fa-cloud"></i>
-                  Try for Free
-                  </a>
+                >
+                  <i class="fas fa-cloud"></i>
+                </a>
               </div>
             </div>
             <div class="feature-strip">
@@ -194,14 +192,6 @@
                     <div class="d-flex flex-column flex-sm-row">
                       <a
                         class="btn btn-primary btn-home-slack fw-500 mb-3 mb-sm-0 me-sm-3"
-                        href="https://cloud.getcollate.io"
-                        target="_blank"
-                      >
-                        <i style="margin-right:0.5rem;font-size:18px;" class="fas fa-cloud"></i>
-                        Try Cloud for Free
-                      </a>
-                      <a
-                        class="btn btn-outline-primary btn-home-slack fw-500 mb-3 mb-sm-0 me-sm-3"
                         href="https://sandbox.open-metadata.org/"
                         target="_blank"
                       >
@@ -219,6 +209,19 @@
                           loading="lazy"
                         />&nbsp; Join our Slack</a
                       >
+                      <a
+                        class="btn btn-outline-primary btn-home-gitstar fw-500"
+                        href="https://github.com/open-metadata/OpenMetadata/stargazers"
+                      >
+                        <img
+                          src="https://img.shields.io/github/stars/open-metadata?style=social"
+                          alt="github-stars"
+                          width="120"
+                          height="30"
+                          title="GitHub Stars"
+                          loading="lazy"
+                        />
+                      </a>
                     </div>
                   </div>
                   <div
