Change the cloud signup URL

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </ul>
                 <a
                   class="btn fw-500 btn-primary rounded-pill"
-                  href="https://share.hsforms.com/1fstvMCeZRZKTYA4nG1VTPgcq0j9"
+                  href="https://cloud.getcollate.io"
                   target="_blank"
                 >
                   <i class="fas fa-cloud"></i>
@@ -1476,7 +1476,7 @@
                     <p>
                       <a
                         class="btn btn-primary fw-500"
-                        href="https://share.hsforms.com/1fstvMCeZRZKTYA4nG1VTPgcq0j9"
+                        href="https://cloud.getcollate.io"
                         target="_blank"
                         >Sign Up for the SaaS Trial</a
                       >
