--- a/index.html
+++ b/index.html
@@ -153,21 +153,24 @@
                 </a>
               </div>
             </div>
-            <div class="feature-strip">
-              Get the best in Roles & Policies as well as Data Quality &
-              Profiler with
-              <strong>OpenMetadata 0.12.0 Release</strong>. Watch the
-              <a
-                href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
-                target="_blank"
-                >demo</a
-              >
-              or
-              <a
-                href="https://blog.open-metadata.org/openmetadata-0-12-0-release-1ac059700de4"
-                target="_blank"
-                >read more</a
-              >.
+            <div class="saas-strip">
+              <div class="container">
+                <div class="row gx-5 align-items-center">
+                  <div class="col-lg-9">
+                    <strong>OpenMetadata SaaS Trial Offer!</strong> Go ahead
+                    &amp; access the full suite of features to rebuild trust in
+                    your data.
+                  </div>
+                  <div class="col-lg-3">
+                    <a
+                      class="btn btn-md btn-saas btn-quick-cta fw-700"
+                      href="https://cloud.getcollate.io"
+                      target="_blank"
+                      >Sign Up for the SaaS Trial</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
           </nav>
           <!-- Page Header-->
@@ -238,6 +241,48 @@
                   </div>
                 </div>
               </div>
+              <div class="svg-border-rounded text-white">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 144.54 17.34"
+                  preserveAspectRatio="none"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+          </header>
+
+          <section class="bg-banner py-6">
+            <div class="container px-5 z-1">
+              <div class="row gx-5 justify-content-center text-center">
+                <div class="col-lg-6">
+                  <div class="display-6 text-primary">
+                    0.12.0 Released - Try Now!
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div>
+                    Get the best in Roles & Policies as well as Data Quality &
+                    Profiler with
+                    <strong>OpenMetadata 0.12.0 Release</strong>. Watch the
+                    <a
+                      href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
+                      target="_blank"
+                      >demo</a
+                    >
+                    or
+                    <a
+                      href="https://blog.open-metadata.org/openmetadata-0-12-0-release-1ac059700de4"
+                      target="_blank"
+                      >read more</a
+                    >.
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="svg-border-rounded text-light">
               <svg
@@ -251,7 +296,7 @@
                 ></path>
               </svg>
             </div>
-          </header>
+          </section>
 
           <section class="bg-light py-10">
             <div class="container px-5">
