Change font weight

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="container px-5 z-1">
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
-                  <div class="display-6 text-primary">
+                  <div class="display-6 text-primary fw-500">
                     0.12.0 Released - Try Now!
                   </div>
                 </div>
