Update community page with latest webinar and community meeting video

--- a/community.html
+++ b/community.html
@@ -279,15 +279,16 @@
                       <iframe
                         width="100%"
                         height="325"
-                        src="https://www.youtube.com/embed/gLdTOF81YpI"
+                        src="https://www.youtube.com/embed/jEbN1tt89H0"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        Build Trust in your Data with OpenMetadata: Intro to
-                        Data Quality and Profiler.
+                        Data Lineage Webinar : Automatically extract the lineage
+                        from your data warehouses such as Snowflake, dashboard
+                        service like metabase.
                       </p>
                     </div>
                   </div>
@@ -298,15 +299,15 @@
                       <iframe
                         width="100%"
                         height="325"
-                        src="https://www.youtube.com/embed/rB77sPtPtJ4"
+                        src="https://www.youtube.com/embed/gLdTOF81YpI"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        How to Set up Integrations for Metadata Ingestion, Usage
-                        & Lineage, and Data Quality in OpenMetadata
+                        Build Trust in your Data with OpenMetadata: Intro to
+                        Data Quality and Profiler.
                       </p>
                     </div>
                   </div>
@@ -369,15 +370,13 @@
                           <iframe
                             width="100%"
                             height="325"
-                            src="https://www.youtube.com/embed/tv3pyCLcJfQ"
+                            src="https://www.youtube.com/embed/8gbj9c_wb9Y"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">
-                            OpenMetadata 0.12.0 Release
-                          </p>
+                          <p class="fw-600 mb-0 mt-2">October 27th, 2022</p>
                         </div>
                       </div>
                     </div>
@@ -387,13 +386,15 @@
                           <iframe
                             width="100%"
                             height="325"
-                            src="https://www.youtube.com/embed/FeT9Ia98g4Y"
+                            src="https://www.youtube.com/embed/tv3pyCLcJfQ"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">September 7th, 2022</p>
+                          <p class="fw-600 mb-0 mt-2">
+                            OpenMetadata 0.12.0 Release
+                          </p>
                         </div>
                       </div>
                     </div>
