--- a/community.html
+++ b/community.html
@@ -288,7 +288,7 @@
                       <p class="fw-600 mb-0 mt-2">
                         Data Lineage Webinar : Automatically extract the lineage
                         from your data warehouses such as Snowflake, dashboard
-                        service like metabase.
+                        service like MetaBase.
                       </p>
                     </div>
                   </div>
