added new testimonials with images

--- a/index.html
+++ b/index.html
@@ -1557,9 +1557,9 @@
               </div>
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper" id="testimonialContainer"></div>
-                  <div class="swiper-button-next"></div>
+                  <!-- <div class="swiper-button-next"></div>
                   <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination"></div> -->
               </div>
             </div>
             <div class="svg-border-rounded text-light">
