--- a/index.html
+++ b/index.html
@@ -1547,11 +1547,11 @@
                 <div class="col-lg-8">
                   <div class="text-center mb-5">
                     <h2 class="section-header fw-600">Testimonials</h2>
-                    <p class="lead">
+                    <!-- <p class="lead">
                       OpenMetadata's ingestion framework supports connectors for
                       a wide range of services, and the list is constantly
                       growing...
-                    </p>
+                    </p> -->
                   </div>
                 </div>
               </div>
