Rework on testimonial placement and content as well as for community page

--- a/community.html
+++ b/community.html
@@ -221,15 +221,12 @@
             <div class="container px-5">
               <div class="row gx-5 align-items-center justify-content-center">
                 <div class="col-lg-6">
-                  <h2 class="section-header fw-600 mb-4">Bi-Weekly Meetups</h2>
+                  <h2 class="section-header fw-600 mb-4">Monthly Meetups</h2>
                   <p class="lead">
-                    Join us on <strong>alternate Wednesdays</strong> over Zoom
-                    to learn about OpenMetadata’s progress. We are on a monthly
-                    release schedule. So every alternate meeting, we have a new
-                    release to showcase.
+                    Join us on the <strong>last Thursday of the month</strong>  over Zoom to learn about OpenMetadata’s progress. Catch up with some exciting news on the upcoming features. Watch live demos, ask questions, and share your feedback.
                   </p>
                   <p class="lead mb-4">
-                    Come, join in, and share your feedback and questions.
+                    Stay tuned for the latest in Metadata management!
                   </p>
                   <a
                     class="btn btn-primary fw-500"
@@ -322,9 +319,7 @@
                 <div class="col-lg-8">
                   <div class="text-center mt-5">
                     <p class="lead">
-                      Watch our webinars on metadata ingestion, data discovery,
-                      usage, lineage, and data quality tests. Base your business
-                      decisions on the right data!
+                      Watch out for an end-to-end coverage on everything you need to know about Data Lineage, Data Quality & Profiler, Setting up Integrations for Metadata Ingestion, Data Discovery, and a lot more.
                     </p>
                   </div>
                 </div>
