--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
               </div>
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper" id="testimonialContainer"></div>
-                  <!-- <div class="swiper-button-next"></div>
+                  <div class="swiper-button-next"></div>
                   <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div> -->
+                  <!-- <div class="swiper-pagination"></div> -->
               </div>
             </div>
           </section>
