fix the cursor on cards

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           </section>
 
           <section class="bg-white py-10">
-            <div class="container px-5">
+            <div class="container position-relative px-5">
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
                   <div class="text-center mb-5">
@@ -362,10 +362,10 @@
                 </div>
               </div>
               <div class="swiper mySwiper">
-                <div class="swiper-wrapper" id="testimonialContainer"></div>
-                  <div class="swiper-button-next"></div>
-                  <div class="swiper-button-prev"></div>
+                <div class="swiper-wrapper" id="testimonialContainer"></div> 
               </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
             </div>
           </section>
 
