Comment the watch for now

--- a/index.html
+++ b/index.html
@@ -272,13 +272,14 @@
                   <div>
                     Data Insights & KPIs, Lineage Traceability, Data Lake
                     Profiler, Search Improvements, and lots more.
-                    <strong>OpenMetadata 0.13.0 Release</strong>. Watch the
+                    <strong>OpenMetadata 0.13.0 Release</strong>
+                    <!-- . Watch the
                     <a
                       href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
                       target="_blank"
                       >demo</a
                     >
-                    or
+                    or -->
                     <a
                       href="https://blog.open-metadata.org/openmetadata-0-13-0-release-ac8ac5bd87c1"
                       target="_blank"
