--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <a
                       href="https://blog.open-metadata.org/openmetadata-0-13-0-release-ac8ac5bd87c1"
                       target="_blank"
-                      >read more</a
+                      >Read more here</a
                     >.
                   </div>
                 </div>
