Update saas link to getcollate.io

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </ul>
                 <a
                   class="btn fw-500 btn-primary rounded-pill"
-                  href="https://cloud.getcollate.io"
+                  href="https://getcollate.io"
                   target="_blank"
                 >
                   <i class="fas fa-cloud"></i>
@@ -168,7 +168,7 @@
                   <div class="col-lg-3">
                     <a
                       class="btn btn-md btn-saas btn-quick-cta fw-700"
-                      href="https://cloud.getcollate.io"
+                      href="https://getcollate.io"
                       target="_blank"
                       >Sign Up for the SaaS Trial</a
                     >
@@ -1613,7 +1613,7 @@
                     <p>
                       <a
                         class="btn btn-primary fw-500"
-                        href="https://cloud.getcollate.io"
+                        href="https://getcollate.io"
                         target="_blank"
                         >Sign Up for the SaaS Trial</a
                       >
